--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
       color: #111827;
     }
 
+    /* Gradient text for hero keyword */
+    .gradient-text {
+      background: linear-gradient(135deg, #22c55e 0%, #16a34a 40%, #0ea5e9 100%);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+    }
+
     .hero-layout {
       display: grid;
       grid-template-columns: minmax(0, 3fr) minmax(0, 2.4fr);
@@ -682,7 +690,7 @@
       gap: 16px;
       overflow-x: auto;
       scroll-behavior: smooth;
-      padding: 8px 40px;
+      padding: 30px 40px;
     }
 
     .meal-carousel::-webkit-scrollbar {
@@ -891,7 +899,7 @@
         grid-template-columns: minmax(0, 1fr);
       }
       .meal-carousel {
-        padding: 8px 30px;
+        padding: 24px 30px;
       }
       .brand-logo {
         max-height: 70px;
@@ -941,14 +949,14 @@
             <span>Custom 3-week T2D experiment</span>
           </div>
 
-          <h1>Lower your blood sugar with a plan built around your real life.</h1>
+          <h1>Lower your <span class="gradient-text">blood sugar</span> with a plan built around your real life.</h1>
 
           <p class="hero-subhead">
             You fill out a short intake, I build a <strong>custom 3-week plan</strong> around your routine, preferences, and meds&mdash;so you can use food and walking to aim for <strong>less medication</strong> and better numbers.
           </p>
 
           <div class="hero-cta">
-            <a href="#start" class="btn-primary">
+            <a href="https://buy.stripe.com/test_14A9ATaHk1OEbUX8Mm3wQ00" class="btn-primary">
               <span>Start Your 3-Week Experiment</span>
               <span class="arrow">→</span>
             </a>
@@ -1138,7 +1146,7 @@
         </p>
 
         <div style="margin-top: 18px; text-align:center;">
-          <a href="#" class="btn-primary">
+          <a href="https://buy.stripe.com/test_14A9ATaHk1OEbUX8Mm3wQ00" class="btn-primary">
             <span>Start Your 3-Week Experiment – $29</span>
             <span class="arrow">→</span>
           </a>
@@ -1539,7 +1547,7 @@
           Fill out a short intake, get a custom 3-week T2D experiment, and aim for the day your doctor says,
           <strong>“We can lower this dose.”</strong>
         </p>
-        <a href="#" class="btn-primary">
+        <a href="https://buy.stripe.com/test_14A9ATaHk1OEbUX8Mm3wQ00" class="btn-primary">
           <span>Start Your 3-Week Experiment – $29</span>
           <span class="arrow">→</span>
         </a>
