--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     /* Gradient text for hero keyword */
     .gradient-text {
-      background: linear-gradient(135deg, #22c55e 0%, #16a34a 40%, #0ea5e9 100%);
+      background: linear-gradient(135deg, #ff4242 0%, #b91c1c 40%, #f2ba13 100%);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
@@ -934,7 +934,7 @@
     <!-- BRAND / LOGO -->
     <div class="brand-bar">
       <img
-        src="https://lh3.googleusercontent.com/sitesv/AAzXCkfay-MG9OLkbWlRafj7vMCaBVFXxMOkVq_CS3yVu3tbzFdOk_97IisXaPupC70p_9rQpwoNBXE8cQyH0BROgVrmorpCPdNX568aENZhDM8rwQZvqU9E0TMkA_wY0NU1u1Re-nf11SfVKACbQZ8waf7-iITawu_DsrrAA1MhzHN42dZm8vdZxFvL=w1280"
+        src="https://i.imgur.com/zoLpY0w.png"
         alt="Happy Healing logo"
         class="brand-logo"
       />
@@ -1559,7 +1559,7 @@
 
     <!-- SITE FOOTER -->
     <footer class="site-footer">
-      <div>©2025 Happy Healing</div>
+      <div>©2025 Happy Healing. All Rights Reserved.</div>
       <div class="footer-links">
         <a href="privacy.html">Privacy Policy</a>
         <a href="terms.html">Terms of Service</a>
