--- a/privacy.html
+++ b/privacy.html
@@ -103,7 +103,7 @@
   <div class="page">
     <div class="brand-bar">
       <img
-        src="https://lh3.googleusercontent.com/sitesv/AAzXCkfay-MG9OLkbWlRafj7vMCaBVFXxMOkVq_CS3yVu3tbzFdOk_97IisXaPupC70p_9rQpwoNBXE8cQyH0BROgVrmorpCPdNX568aENZhDM8rwQZvqU9E0TMkA_wY0NU1u1Re-nf11SfVKACbQZ8waf7-iITawu_DsrrAA1MhzHN42dZm8vdZxFvL=w1280"
+        src="https://i.imgur.com/zoLpY0w.png"
         alt="Happy Healing logo"
         class="brand-logo"
       />
