--- a/intake.html
+++ b/intake.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16909846627"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16909846627');
+</script>
+
   <meta charset="UTF-8" />
   <title>Custom 3-Week T2D Experiment – Intake</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
