--- a/intake.html
+++ b/intake.html
@@ -12,6 +12,17 @@
   gtag('config', 'AW-16909846627');
 </script>
 
+<!-- Event snippet for Purchase conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-16909846627/Id5wCPbup84bEOOQn_8-',
+      'value': 29.0,
+      'currency': 'USD',
+      'transaction_id': ''
+  });
+</script>
+
+
   <meta charset="UTF-8" />
   <title>Custom 3-Week T2D Experiment – Intake</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
